des157a/lj/indexStyles.css
/* ---------------------------SETTING UP PAGE--------------------------- */
html {
    /* min-height: 800px; */
    max-width: 1366px;
    height: 95.725%;
    min-height: 95.725%;
    margin: 0;
    /* background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); */
    background-color: #11171f;
}

body {
    color: white;
    min-height: 95.725%;
    /* background-color: #2d2d2d; */
    width: 100%;
    padding: 2% 0;
    display: flex;
    flex-direction: column;
}

.spacer {
    flex: 1;
}

/* --------------------------SETTING UP HEADER-------------------------- */
header{
    text-align: center;
    margin-bottom: 10px;
}

header h1 {
    margin: 5px 0;
}

header h2 {
    margin: 5px 0;
}

/* ------------------------SETTING UP MAIN TABLE------------------------ */
main {
    width: 100%;
    min-height: 75%;
    margin: 0 auto;
    margin-bottom: 20px;
    align-content: center;
}

table {
    width: 85%;
    /* height: 100%; */
    margin: auto;
    border-collapse: collapse;
    border-spacing: 2em;
}

table td {
    padding: 0 3%;
    vertical-align: top;
}

.dateCol {
    text-align: right;
    width: 20%;
    border-right: 2px solid #a5c3e5;
}

.articleCol {
    text-align: left;
    width: 80%;
}

.articleCol .title {
    display: block;
    position: relative;
    cursor: pointer;
}

.articleCol article, .dateCol div{
    margin: 10px 0;
}

.articleCol article {
    box-shadow: 0 0.1em 1em -0.5em rgba(0, 0, 0, 0.4);
    overflow: hidden;
}

.articleCol h3, .dateCol {
    font-size: 25px;
}

.articleCol h3, .articleCol p, .dateCol {
    padding: 10px;
    margin: 0;
}

.articleCol h3 {
    background-color: #2a3f55;
    list-style: none;
    display: block;
    position: relative;
}

.articleCol h3 {
    padding-left: 3%;
}

.articleCol .arrow {
    content: '';
    position: absolute;
    z-index: 1;
    top: calc(50% - .5em);
    left: 1.5%;
    border-width: .5em;
    border-style: solid;
    border-color: transparent transparent transparent #fff;
    transform: rotate(0);
    transform-origin: .25em 50%;
    transition: .75s ease;
}

.articleCol .contentCover {
    height: 0;
    transition: .75s ease;
}

.articleCol p {
    background-color: #4e6075;
    word-spacing: 0.1em;
    line-height: 1.5em;
    color: white;
    font-size: 1.15em;
    text-align: justify;
}


/* ----------------------------SETTING UP FOOTER---------------------------- */
footer {
    max-width: 1300px;
}

footer a {
    text-align: center;
    color: white;
    display: block;
    font-size: 17px;
    padding: 1%;
    border: 3px solid transparent;
    text-decoration: none;
    float: right;
}

footer a:hover {
    border: 3px solid #185494;
    text-decoration: underline;
}

